2010-03-22  Sam Steingold  <sds@gnu.org>

	* modules/libsvm: remove the upstream sources; install locally and
	pass --with-libsvm-prefix to the top-level configure instead
	* Makefile.devel (MODULES): add libsvm

2010-03-22  Sam Steingold  <sds@gnu.org>

	* modules/libsvm: upgrade to upstream 2.90

2010-03-19  Sam Steingold  <sds@gnu.org>

	* modules/gdbm/gdbm.c (GDBM-VERSION): cache return value

2010-03-19  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): when OBJDEF-INIT is
	STRINGIFY(FOO), print it as "\"~S\"" to use the quoted CPP definition

2010-03-19  Sam Steingold  <sds@gnu.org>

	upgrade to pcre 8.01
	* modules/pcre/cpcre.c (fullinfo_bool): add
	(PCRE-CONFIG): also accept :MATCH-LIMIT-RECURSION :BSR
	(PCRE-COMPILE): also accept :DFA-SHORTEST :DFA-RESTART
	:FIRSTLINE :DUPNAMES :NEWLINE-CR :NEWLINE-LF :NEWLINE-CRLF :NEWLINE-ANY
	:NEWLINE-ANYCRLF :BSR-ANYCRLF :BSR-UNICODE :JAVASCRIPT-COMPAT
	:NO-START-OPTIMIZE :NO-START-OPTIMISE :PARTIAL-HARD :NOTEMPTY-ATSTART
	(PATTERN-INFO): also accept :OKPARTIAL :JCHANGED :HASCRORLF :MINLENGTH
	(PCRE-VERSION): also return PCRE_DATE

2010-03-19  Sam Steingold  <sds@gnu.org>

	* genclisph.d (print_file) [!HAVE_STDBOOL_H]: enable (see lispbibl.d)
	Reported by Raymond Toy <toy.raymond@gmail.com>

2010-03-18  Sam Steingold  <sds@gnu.org>

	* ../Makefile.devel (GET_PREFIX): add
	($(MAKEFILE_IN)): use it
	(gnulib-imported): remove macro-prefix from _GL_UNUSED which is
	defined in config.h using gnulib-common.m4:gl_COMMON_BODY and thus
	is not amenable to the macro-prefix strategy

2010-03-18  Sam Steingold  <sds@gnu.org>

	* stream.d (handle_direction_compatible) [WIN32_NATIVE]:
	fix bug #[ 2805778 ] ("0>/dev/null") by using
	GetNumberOfConsoleInputEvents for FILE_TYPE_CHAR
	and PeekNamedPipe for FILE_TYPE_PIPE

2010-03-17  Sam Steingold  <sds@gnu.org>

	* makemake.in, modules/regexp/Makefile.in,
	* modules/syscalls/Makefile.in, modules/wildcard/Makefile.in (gllib):